--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="features_img">
-                <img src="/img/barber-man.jpg" alt="">
+                <img src="img/barber-man.jpg" alt="">
             </div>
         </div>
     </section>
@@ -87,7 +87,7 @@
         </div>
         <div class="service_box">
             <div class="single_sevice">
-                <img src="/img/pic-1.jpg" alt="">
+                <img src="img/pic-1.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service_decs">
                     <h3>Hair Styling</h3>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="single_sevice">
-                <img src="/img/pic-2.jpg" alt="">
+                <img src="img/pic-2.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service_decs">
                     <h3>Hair Styling</h3>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="single_sevice">
-                <img src="/img/pic-3.jpg" alt="">
+                <img src="img/pic-3.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service_decs">
                     <h3>Hair Styling</h3>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="single_sevice">
-                <img src="/img/pic-4.jpg" alt="">
+                <img src="img/pic-4.jpg" alt="">
                 <div class="overlay"></div>
                 <div class="service_decs">
                     <h3>Hair Styling</h3>
@@ -143,7 +143,7 @@
         <div class="testimonial_row">
             <div class="testimonial_col">
                 <div class="user">
-                    <img src="/img/img-1.jpg" alt="">
+                    <img src="img/img-1.jpg" alt="">
                     <div class="user_info">
                         <h4>KEN NORMAN <i class=" fa fa-twitter"></i></h4>
                         <small>@kennorman</small>
@@ -157,7 +157,7 @@
             </div>
             <div class="testimonial_col">
                 <div class="user">
-                    <img src="/img/img-2.jpg" alt="">
+                    <img src="img/img-2.jpg" alt="">
                     <div class="user_info">
                         <h4>Liara Karian <i class=" fa fa-twitter"></i></h4>
                         <small>@liarakarian</small>
@@ -169,7 +169,7 @@
             </div>
             <div class="testimonial_col">
                 <div class="user">
-                    <img src="/img/img-3.jpg" alt="">
+                    <img src="img/img-3.jpg" alt="">
                     <div class="user_info">
                         <h4>Ricky Danial <i class=" fa fa-twitter"></i></h4>
                         <small>@rickydanial</small>
@@ -185,7 +185,7 @@
 
     </section>
     <section id="footer">
-        <img class="footer_img" src="/img/footer-img.png" alt="">
+        <img class="footer_img" src="img/footer-img.png" alt="">
         <div class="title_text">
             <p>CONTACT</p>
             <h1>Visit Shop Today</h1>
